# SC203_Experiment

./: CMakeLists.txt  Result Experiment 2.txt  data.hpp  experiment.cpp  experiment.hpp  experiment2.cpp  experiment2.hpp  file.hpp  main.cpp  output.hpp  randomize.cpp  shuffled_vector.txt  shuffly.cpp  sort.hpp
data/input/experiment1/: 100.txt  1000.txt  10000.txt
data/output/experiment1/: 100.txt  1000.txt  10000.txt
data/output/experiment2/: 1000000.txt
